--- a/task4.html
+++ b/task4.html
@@ -9,7 +9,7 @@
     <iframe src="" frameborder="1" name="html" height="500px" width="500px"></iframe>
         <a href="https://html.spec.whatwg.org/" target="html">
         <img src="https://www.w3schools.com/whatis/img_html.jpg" height="100px" width="100px"></a>
-        <a href="https://www.gps-coordinates.net/my-location" target="html">
+        <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d487293.47787294025!2d78.07836396338965!3d17.412733230872117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb99daeaebd2c7%3A0xae93b78392bafbc2!2sHyderabad%2C%20Telangana!5e0!3m2!1sen!2sin!4v1746526355548!5m2!1sen!2sin" target="html">
         <img src="https://cdn-icons-png.flaticon.com/512/535/535137.png"  height="100px" width="100px"></a>
         <a href="https://tourism.telangana.gov.in/" target="html">
             <img src="https://images.pexels.com/photos/414612/pexels-photo-414612.jpeg?cs=srgb&dl=pexels-souvenirpixels-414612.jpg&fm=jpg"  height="100px" width="100px"></a>
